<resources>
    <string name="app_name">MathWizdom</string>
    <string name="welcome_to_math_wizdom">Welcome to MathWizdom!</string>
    <string name="i_am_a">I am a:</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="role_emoji">👨‍🎓</string>
    <string name="student_login">Student Login</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="student_registration">Student Registration</string>
    <string name="teacher_registration">Teacher Registration</string>
    <string name="learner_reference_no">LRN (Learner Reference No.)</string>
    <string name="employee_number">Employee Number</string>
    <string name="enter_your_lrn">Enter your LRN</string>
    <string name="enter_your_employee_number">Enter your Employee Number</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="error_message_here">Error message here</string>
    <string name="new_user">New User</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_123456789">123456789</string>
    <string name="menu">Menu</string>
    <string name="toggle_voice">Toggle Voice</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="edit_name">Edit Name</string>
    <string name="full_name_label">Full Name:</string>
    <string name="gender_label">Gender:</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="logout">Logout</string>
    <string name="grade_six_mathematics">GRADE SIX MATHEMATICS</string>
    <string name="student_name">Student Name</string>
    <string name="note_description">You can only edit your avatar and name.</string>
    <string name="character">CHARACTER</string>
    <string name="lrn">LRN:</string>
    <string name="_099999999999">099999999999</string>
    <string name="john_doe">John Doe</string>
    <string name="horse">Horse Image</string>
    <string name="_1st_quarter">1st Quarter</string>
    <string name="bird">Bird Image</string>
    <string name="_2nd_quarter">2nd Quarter</string>
    <string name="rat">Rat Image</string>
    <string name="_3rd_quarter">3rd Quarter</string>
    <string name="fox">Fox Image</string>
    <string name="_4th_quarter">4th Quarter</string>
    <string name="animal">Decorative Animal</string>
    <string name="back">Back</string>
    <string name="lesson_quarter_1">QUARTER 1 LESSONS</string>
    <string name="topic">TOPIC</string>
    <string name="activity">ACTIVITY</string>
    <string name="quarter_selection">Quarter Selection</string>
    <string name="topics">Similar and Dissimilar Fractions</string>
    <string name="ActivitiesTitle">LESSON 1 - ACTIVITIES</string>
    <string name="LessonTitle">LESSON 1</string>
    <string name="LessonTopicTitle">LESSON 1 - TOPIC</string>
    <string name="objective">OBJECTIVE:</string>
    <string name="ObjectiveDescription">After this lesson, you should be able to add and subtract simple fractions and mixed numbers, whether with regrouping or without regrouping.</string>
    <string name="settings">Settings</string>
    <string name="example">Guide:</string>
    <string name="exampledescription">Fractions are similar if they have the same bottom number (denominator) and dissimilar if they have different bottom numbers.</string>
    <string name="exampleviews">2/20 and 5/20</string>
    <string name="similar">SIMILAR</string>
    <string name="exampleview2">2/13 and 5/14</string>
    <string name="dissimilar">DISSIMILAR</string>
    <string name="directiondescription">Examine each pair of fractions and determine whether they are similar or dissimilar. Choose SIMILAR or DISSIMILAR for each pair.</string>
    <string name="direction">Direction:</string>
    <string name="titledescription">IDENTIFYING SIMILAR AND DISSIMILAR FRACTIONS</string>
    <string name="title">Title:</string>
    <string name="activity_1">ACTIVITY #1</string>
    <string name="skip">Skip</string>
    <string name="countdown">Starting in 10…</string>
    <string name="toggle_fullscreen">Toggle fullscreen</string>
    <string name="lesson_topic">LESSON %d - TOPIC</string>
    <string name="lesson_topic_title">LESSON - TOPIC</string>
    <string name="objective_lesson_1_1">After this lesson, you should be able to add and subtract simple fractions and mixed numbers, whether with regrouping or without regrouping.</string>
    <string name="objective_lesson_1_2">After this lesson, you should be able to solve both routine and non-routine problems that involve adding or subtracting fractions using the appropriate solving strategies and tools.</string>
    <string name="objective_lesson_1_3">After this lesson, you should be able to multiply simple fractions and mixed fractions.</string>
    <string name="objective_lesson_1_4">After this lesson, you should be able to solve both routine and non-routine problems that involve multiplying fractions and mixed numbers with or without addition or subtraction using appropriate problem-solving strategies and tools.</string>
    <string name="objective_lesson_1_5">After this lesson, you should be able to divide simple fractions and mixed numbers.</string>
    <string name="objective_lesson_1_6">After this lesson, you should be able to solve both routine and non-routine problems that involve dividing fractions and mixed numbers with or without any of the other operations, using appropriate problem-solving strategies and tools.</string>
    <string name="objective_lesson_1_7">After this lesson, you should be able to add and subtract decimals and mixed decimals up to ten thousandths, with or without regrouping.</string>
    <string name="objective_lesson_1_8">After this lesson, you should be able to solve 1 or more steps of routine and non-routine problems that involve adding and/or subtracting decimals and mixed decimals. You can use the appropriate problem-solving strategies and tools to do this.</string>
    <string name="objective_lesson_1_9">After completing this lesson, you should be able to multiply decimals and mixed decimals with up to 2 decimal places.</string>
    <string name="objective_lesson_1_10">After going through this lesson, you are expected to multiply mentally decimals up to 2 decimal places by 0.1, 0.01, 10, and 100.</string>
    <string name="objective_lesson_1_11">After this lesson, you should be able to solve both routine and non-routine problems that involve multiplying decimals and mixed decimals, including money, using appropriate problem-solving strategies.</string>
    <string name="objective_lesson_1_12">After this lesson, you should be able to solve multi-step problems that involve multiplying and adding or subtracting decimals, mixed decimals, and whole numbers, including money, using the appropriate problem-solving strategies and tools.</string>
    <string name="objective_lesson_1_13">After completing this lesson, you should be able to divide whole numbers by decimals with up to two decimal places and also divide decimals by whole numbers and mixed decimals with up to two decimal places.</string>
    <string name="objective_lesson_1_14">After this lesson, you should be able to divide decimals with up to four decimal places by 0.1, 0.01, and 0.001, and decimals with up to two decimal places by 10, 100, and 1,000 in your head.</string>
    <string name="objective_lesson_1_15">After this lesson, you should be able to tell the difference between decimal numbers that end (terminating) and those that go on forever in a repeating pattern (repeating, non-terminating).</string>
    <string name="objective_lesson_1_16">By the end of this lesson, you should be able to solve routine and non-routine problems involving the division of decimals, mixed decimals, whole numbers, and money using effective problem-solving strategies and tools.</string>
    <string name="objective_lesson_1_17">This lesson will help you solve complex, multi-step problems involving division with decimals, whole numbers, and money. You\'ll learn to apply effective problem-solving strategies and tools, building confidence to tackle real-world problems with these operations.</string>
    <string name="objective_lesson_2_1">Upon completing this lesson, you should be able to express one value as a fraction of another based on their ratio and do the reverse as well.</string>
    <string name="objective_lesson_2_2">After this lesson, you should be able to explain and understand ratio and proportion.</string>
    <string name="objective_lesson_2_3">After this lesson, you should be able to find the percentage, rate, and base in a given problem and also solve both routine and non-routine problems involving these concepts.</string>
    <string name="objective_lesson_2_4">By the end of this lesson, you will be able to solve a variety of problems involving percentages, including discounts, original prices, discount rates, sale prices, markup prices, commissions, sales tax, and simple interest and principal. You will also learn how to calculate Percentage, Rate, and Base.</string>
    <string name="objective_lesson_2_5">This lesson will help you understand exponents and bases in numbers written in exponential notation, as well as the importance of this topic in various mathematical operations.</string>
    <string name="objective_lesson_2_6">After this lesson, we will learn the order of operations used to simplify expressions. The order of operations refers to the sequence in which steps must be followed to correctly simplify an expression, based on specific rules for each set of operations.</string>
    <string name="objective_lesson_2_7">In this lesson, we will explore the set of integers and identify real-life situations where they are used. In the number system, there are two main categories: real numbers and imaginary numbers. Integers are classified as real numbers.</string>
    <string name="objective_lesson_2_8">In the previous lesson, we explored integers and the basic concept of the number line. In this topic, we will compare and arrange integers on the number line.</string>
    <string name="objective_lesson_2_9">In this lesson, we will also explore how to interpret and describe the basic operations of integers are addition and subtraction using materials such as algebra tiles, counters, or chips.</string>
    <string name="objective_lesson_2_10">In this lesson, we will learn how to perform basic operations with integers.</string>
    <string name="objective_lesson_2_11">In this lesson, you will learn how to solve both routine and non-routine problems involving the basic operations of integers, using the appropriate strategies and tools.</string>
    <string name="objective_lesson_3_1">In this lesson, we will explore basic geometry concepts and learn how to describe the shapes we see around us. We will look at pictures of different figures and talk about how geometry appears in everyday objects. We will also learn about different solid figures and their common characteristics.</string>
    <string name="objective_lesson_3_2">In this module, we will explore additional concepts in algebra. We\'ll develop strategies for finding the nth term of a sequence by using various methods, such as identifying patterns, making educated guesses, and working backward. Additionally, we\'ll focus on distinguishing between expressions and equations.</string>
    <string name="objective_lesson_3_3">In this lesson, we will focus on translating real-life word expressions and equations into letters and vice versa.</string>
    <string name="lesson_title">LESSON 1</string>
    <string name="youtube">VIDEO TUTORIALS</string>
    <string name="user_avatar">User Avatar</string>
</resources>